--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "normalize.css": "^8.0.1",
     "pixi-spine": "^3.0.13",
     "pixi.js": "^6.2.1",
+    "vant": "^3.4.5",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
@@ -33,6 +34,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
