--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "normalize.css": "^8.0.1",
     "pixi-spine": "^3.0.13",
     "pixi.js": "^6.2.1",
+    "poly-decomp": "^0.3.0",
     "vant": "^3.4.5",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/matter-js": "^0.17.7",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
