--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "gsap": "^3.9.1",
     "matter-js": "^0.18.0",
     "normalize.css": "^8.0.1",
     "pixi-spine": "^3.0.13",
