--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "run",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -49,6 +48,15 @@
     "typescript": "~4.1.5",
     "vue-jest": "^5.0.0-0"
   },
+  "keywords": [
+    "跑酷",
+    "游戏",
+    "PIXI",
+    "canvas",
+    "2d",
+    "game",
+    "matter"
+  ],
   "eslintConfig": {
     "root": true,
     "env": {
